fix overlapping intro_image

--- a/_sass/components/_intro-image.scss
+++ b/_sass/components/_intro-image.scss
@@ -3,6 +3,8 @@
   height: auto;
   margin-top: -40px;
   margin-left: -100px;
+  position: inherit;
+  z-index: -999;
 }
 .intro-image-hide-mobile {
   display: none;
