--- a/_sass/pages/_page-service.scss
+++ b/_sass/pages/_page-service.scss
@@ -45,8 +45,10 @@
   }
 }
 
-.intro {
+.intro p{
   padding-bottom: 20px;
+  width: 95%;
+  text-align: justify;
 }
 
 ul {
